Prevent horizontal scrollbars.

--- a/_css/shared.css
+++ b/_css/shared.css
@@ -52,6 +52,13 @@
     }
   }
 
+  /* SHIM: Prevent horizontal scrollbars */
+  html, body {
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: visible;
+  }
+
   /*
   body > main {
     padding-top: 2.25em;
@@ -116,4 +123,3 @@
       1.75em 1.75em 0 var(--dark-ocean),
       2.25em 2.25em 0 var(--ocean);
   }
-
